--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+body{
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;;
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -13,19 +16,303 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+   display: flex;
+   position: relative;
+   flex-direction: column;
+  justify-content: center;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
 }
+.logo{
+  width: 228px;
+  height: 32px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.logo_place_header{
+  position: absolute;
+  z-index: 2;
+  top: 30px;
+  left: 64px;
 
+}
+.header__title{
+  width: 730px;
+  line-height: 96px;
+font-size: 102px;
+font-weight: 600;
+margin-left: 64px;
+}
+
+.header__subtitle{
+  width: 388px;
+    line-height: 25px;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    margin: 0;
+    left: 64px;
+    bottom: 30px;
+}
+a{
+color: #2f80ed;
+}
+.main__illustration{
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  right: 0;
+  bottom:0;
+  z-index: 2;
+
+}
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  position: absolute;
+  background-color: #2f80ed;;
+  right:0;
+  top: 64px;
+  z-index: 1;
 }
 
+/* Блок с основным контентом*/
+.description{
+  display: flex;
+ padding-top: 100px;
+}
+.two-columns{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 80%;
+  min-width: 784px;
+  margin: auto;
+}
+.two-columns__brief{
+  width: 175px;
+line-height: 1.2;
+font-weight: normal;
+font-size: 18px;
+margin: 0;
+color: #2f80ed;
+}
+.two-columns__main-text{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  line-height: 32px;
+  font-weight: normal;
+  font-size: 24px;
+}
+.two-columns__paragraph{
+  margin-bottom:30px;
+  margin: 0;
+  margin-bottom: 30px;
+}
+.two-columns__paragraph-accent{
+  font-weight: 600;
+  margin: 0;
+  margin-bottom: 30px;
+}
+/*table*/
+.digits{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px 0;
+
+}
+.section-title{
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 20px;
+}
+.section-subtitle{
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 60px;
+}
+.table{
+  display: flex;
+  width: 1100px;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+.table__cell{
+  width: 250px;
+  margin-top: 60px;
+}
+.table__heading{
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+.table__text{
+  margin: 0;
+  margin-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+/* feynman*/
+.feynman{
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 50px;
+  background-color: #f2f2f2;
+  min-height: 790px;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: left bottom;
+  position: relative;
+  justify-content: flex-start;
+}
+
+.feynman__title{
+  text-align: center;
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  margin-top: 100px;
+  margin: 0 auto;
+}
+.feynman__subtitle{
+ text-align: center;
+ line-height: 51px;
+ font-size: 36px;
+font-weight: normal;
+margin: 0;
+margin-top: 70px;
+}
+.feynman__link{
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  color: #2f80ed;
+  font-weight: normal;
+  line-height: 51px;
+  font-size: 36px;
+}
+.link{
+  text-decoration: none;
+
+}
+
+
+
+
+
+
 /* и элемента с модификатором вида ключ-значение */
+.kaufman{
+  background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+.section-title_theme_dark{
+  color: #f2f2f2;
+  z-index: 1;
+}
+.section-subtitle_theme_dark{
+  color: white;
+  z-index: 1;
+}
+.table_theme_dark{
+  z-index: 1;
+}
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
   margin-top: 80px;
+}
+.kaufman__triangle{
+  position: absolute;
+  right: -210px;
+  display: flex;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size:contain;
+  width: 877px;
+  height: 877px;
+  top: 0;
+}
+
+/* footer*/
+
+.footer{
+  background-color: #1f1f1f;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.footer__columns{
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
+.footer__columns_content_copyright{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+.logo_place_footer{
+  background-image: url(../images/logo_place_footer.svg);
+}
+.footer__author{
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18px 0;
+  color: white;
+}
+.footer__column_content_info{
+  display: flex;
+  flex-direction: column;
+}
+.footer__column-heading{
+  color: white;
+  margin: 0 0 20px;
+  padding: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+.footer__column-links{
+  margin: 0 0 16px;
+  padding: 0;
+  list-style: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+li{
+  display: list-item;
+}
+.footer__link{
+  color: white;
+}
+.footer__social-icon{
+  padding-right: 10px;
 }
