--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body{
-  font-family: 'Helvetica Neue', 'Arial', sans-serif;;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 .page {
   min-width: 1100px;
@@ -71,7 +71,7 @@ color: #2f80ed;
   height: 568px;
   width: 568px;
   position: absolute;
-  background-color: #2f80ed;;
+  background-color:#2f80ed;
   right:0;
   top: 64px;
   z-index: 1;
@@ -109,7 +109,6 @@ color: #2f80ed;
 .two-columns__paragraph{
   margin-bottom:30px;
   margin: 0;
-  margin-bottom: 30px;
 }
 .two-columns__paragraph-accent{
   font-weight: 600;
