--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,7 @@ color: #2f80ed;
   margin-bottom:30px;
   margin: 0;
 }
-.two-columns__paragraph-accent{
+.two-columns__span-accent{
   font-weight: 600;
   margin: 0;
   margin-bottom: 30px;
@@ -173,7 +173,7 @@ color: #2f80ed;
   padding: 50px;
   background-color: #f2f2f2;
   min-height: 790px;
-  background-image: url(../images/feynman.png);
+  background-image: url(./images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: left bottom;
