--- a/styles/style.css
+++ b/styles/style.css
@@ -172,7 +172,7 @@ color: #2f80ed;
   padding: 50px;
   background-color: #f2f2f2;
   min-height: 790px;
-  background-image: url(./images/feynman.png);
+  background-image:url(images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: left bottom;
@@ -241,7 +241,7 @@ margin-top: 70px;
   position: absolute;
   right: -210px;
   display: flex;
-  background-image: url(./images/kaufman-triangle.svg);
+  background-image: url(images/kaufman-triangle.svg);
   background-size:contain;
   width: 877px;
   height: 877px;
@@ -270,7 +270,7 @@ margin-top: 70px;
   flex-basis: 711px;
 }
 .logo_place_footer{
-  background-image: url(./images/.logo_place_footer.svg);
+  background-image: url(images/.logo_place_footer.svg);
 }
 .footer__author{
   line-height: 25px;
