моя попытка номер пять

--- a/styles/style.css
+++ b/styles/style.css
@@ -270,7 +270,7 @@ margin-top: 70px;
   flex-basis: 711px;
 }
 .logo_place_footer{
-  background-image: url(/images/.logo_place_footer.svg);
+  background-image: url(./images/logo_place_header.svg);
 }
 .footer__author{
   line-height: 25px;
