правки по проекту

--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,3 +1,13 @@
 .footer__column-link{
+  margin: 0 0 16px;
+  text-decoration: none;
+  transition: opacity .2 linear;
   color: white;
+  cursor: pointer;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__column-link:hover{
+  opacity: .5;
 }
