--- a/blocks/digits/digits.css
+++ b/blocks/digits/digits.css
@@ -1,6 +1,3 @@
 .digits {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 100px 0;
+    margin: 100px auto;
   }
