--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -6,7 +6,10 @@
   font-weight: normal;
   line-height: 51px;
   font-size: 36px;
-}
-.link {
   text-decoration: none;
+  cursor: pointer;
+  transition: opacity .2 linear;
+}
+.feynman__link:hover{
+  opacity: .5;
 }
