--- a/blocks/feynman/__subtitle/feynman__subtitle.css
+++ b/blocks/feynman/__subtitle/feynman__subtitle.css
@@ -3,6 +3,5 @@
     line-height: 51px;
     font-size: 36px;
     font-weight: normal;
-    margin: 0;
-    margin-top: 70px;
+    margin: 70px auto 0;
   }
