--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -4,6 +4,6 @@
     line-height: 1.15;
     font-size: 120px;
     font-weight: 600;
-    margin-top: 100px;
     margin: 0 auto;
+    padding-top: 80px;
   }
