--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,14 +1,9 @@
 .feynman {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 100px;
     background-color: #f2f2f2;
-    min-height: 790px;
+    min-height: 890px;
     justify-content: flex-start;
     background-image: url(../../images/feynman/feynman.png);
     background-repeat: no-repeat;
-    background-size: 867px 637px;
-    background-position: left bottom;
     position: relative;
+    background-position: bottom left;
   }
