--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -1,8 +1,7 @@
 .footer__column-links {
-    margin: 0 0 16px;
+    margin: 20px 0 16px;
     padding: 0;
+    text-decoration: none;
     list-style: none;
-    line-height: 30px;
-    font-size: 18px;
-    font-weight: normal;
   }
+  
