--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -4,8 +4,9 @@
     line-height: 42px;
     font-size: 30px;
     font-weight: normal;
-    transition: color 0.6s;
+    transition: opacity 0.6s linear;
   }
   .khan__buy-link:hover{
-    color: #1f1f1f;
+    opacity: .5;
   }
+   
