--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -4,7 +4,5 @@
     font-size: 24px;
     font-weight: normal;
     text-align: center;
-    margin: 0;
-    margin-bottom: 60px;
-    margin-top: 20px;
+   margin: 20px auto 0;
   }
