--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,3 +1,6 @@
 .video__iframes {
-    transform: translate(0, 50px);
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 50px;
   }
