--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,3 +1,7 @@
 .resources__link {
     list-style: none;
+    transition: opacity .2s linear;
+  }
+  .resources__link:hover{
+    opacity: .5;
   }
