--- a/blocks/two-columns/__main-text/two-columns__main-text.css
+++ b/blocks/two-columns/__main-text/two-columns__main-text.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 80%;
+    min-width: 784px;
     line-height: 34px;
     font-weight: normal;
     font-size: 24px;
